--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -45,11 +45,11 @@
 				<div class="filter__top-inner">
 					<div class="filter__top">
 						<label class="radio">
-							<input class="visually-hidden radio__input" type="radio" name="articles" value="indigo" checked>
+							<input class="visually-hidden radio__input" type="radio" name="category" value="indigo" checked>
 							<span class="radio__box">Образовательные статьи</span>
 						</label>
 						<label class="radio">
-							<input class="visually-hidden radio__input" type="radio" name="articles" value="indigo-2">
+							<input class="visually-hidden radio__input" type="radio" name="category" value="indigo-2">
 							<span class="radio__box">Новостные статьи</span>
 						</label>
 					</div>
