--- a/source/markup/popup.html
+++ b/source/markup/popup.html
@@ -9,24 +9,18 @@
 </head>
 
 <body class="page__body">
-
-	<button class="popup-button">Open modal</button>
-
-	<div class="popup" id="popup" role="dialog">
+	<button class="button_form_none popup-button" id="myBtn">Open modal</button>
+	<div class="popup" id="myModal" role="dialog">
 		<div class="popup__content">
 			<button class="button_form_none popup__close" type="button">
 				<span aria-hidden="true">×</span>
 				<span class="visually-hidden">Закрыть модальное окно</span>
 			</button>
-			<h2 class="title title_size_small">
-				Ошибка!
-			</h2>
-			<p class="text text_size_normal">
-				Мы свяжемся с вами в ближайшее время
-			</p>
+			<h2 class="title title_size_small">Ошибка!</h2>
+			<p class="text">Мы свяжемся с вами в ближайшее время</p>
 		</div>
-		<div class="popup__overlay"> </div>
 	</div>
+	<script src="assets/scripts/popup.js"></script>
 </body>
 
 </html>
