--- a/source/markup/popup.html
+++ b/source/markup/popup.html
@@ -9,18 +9,7 @@
 </head>
 
 <body class="page__body">
-	<!-- <button class="button_form_none popup-button" id="myBtn">Open modal</button>
-	<div class="popup" id="myModal" role="dialog">
-		<div class="popup__content">
-			<button class="button_form_none popup__close" type="button" aria-label="Закрыть модальное окно">
-				<span aria-hidden="true">×</span>
-			</button>
-			<h2 class="title title_size_small">Ошибка!</h2>
-			<p class="text">Мы свяжемся с вами в ближайшее время</p>
-		</div>
 
-		<div class="popup__overlay"></div>
-	</div> -->
 
 	<button class="button_form_none popup-button" id="myBtn" data-path="form-popup">Окно 1</button>
 	<button class="button_form_none popup-button" id="myBtn" data-path="me-popup">Окно 2</button>
@@ -28,14 +17,15 @@
 
 	<div class="modals">
 		<div class="modal-overlay">
-			<div class="modal modal--1" data-target="form-popup" role="dialog" id="myModal">
+			<div class="popup modal--1" data-target="form-popup" role="dialog" id="myModal">
 				<button class="button_form_none popup__close" type="button" aria-label="Закрыть модальное окно">
 					<span aria-hidden="true">×</span>
 				</button>
 				<h2 class="title title_size_small">Ошибка!</h2>
 				<p class="text">Мы свяжемся с вами в ближайшее время</p>
 			</div>
-			<div class="modal modal--2" data-target="me-popup" role="dialog" id="myModal">
+
+			<div class="popup modal--2" data-target="me-popup" role="dialog" id="myModal">
 				<button class="button_form_none popup__close" type="button" aria-label="Закрыть модальное окно">
 					<span aria-hidden="true">×</span>
 				</button>
