--- a/source/markup/popup.html
+++ b/source/markup/popup.html
@@ -10,20 +10,20 @@
 
 <body class="page__body">
 
-	<button class="button_form_none popup-button" data-path="form-popup">Окно 1</button>
-	<button class="button_form_none popup-button" data-path="me-popup">Окно 2</button>
+	<button class="popup-button" data-path="form-popup">Окно 1</button>
+	<button class="popup-button" data-path="me-popup">Окно 2</button>
 
-		<div class="popup-overlay">
-			<div class="popup modal--1" data-target="form-popup" role="dialog" id="myModal">
-				<button class="button_form_none popup__close" type="button" aria-label="Закрыть модальное окно">
+		<div class="overlay">
+			<div class="popup" data-target="form-popup" role="dialog">
+				<button class="popup__close" type="button" aria-label="Закрыть модальное окно">
 					<span aria-hidden="true">×</span>
 				</button>
 				<h2 class="title title_size_small">Ошибка!</h2>
 				<p class="text">Мы свяжемся с вами в ближайшее время</p>
 			</div>
 
-			<div class="popup modal--2" data-target="me-popup" role="dialog" id="myModal">
-				<button class="button_form_none popup__close" type="button" aria-label="Закрыть модальное окно">
+			<div class="popup" data-target="me-popup" role="dialog">
+				<button class="popup__close" type="button" aria-label="Закрыть модальное окно">
 					<span aria-hidden="true">×</span>
 				</button>
 				<h2 class="title title_size_small">Готово!</h2>
