--- a/source/markup/popup.html
+++ b/source/markup/popup.html
@@ -10,27 +10,27 @@
 
 <body class="page__body">
 
-	<button class="popup-button" data-path="form-popup">Окно 1</button>
-	<button class="popup-button" data-path="me-popup">Окно 2</button>
+	<button class="popup-button" data-popup-title="Title 1" data-popup-text="Text">Окно
+		1</button>
+
+	<button class="popup-button" data-popup-title="Title 2" data-popup-text="Text 2">Окно
+		2</button>
+
+	<button class="popup-button" data-popup-title="Title 3" data-popup-text="Text 3">Окно
+		3</button>
+
 
 	<div class="overlay">
-		<div class="popup" data-target="form-popup" role="dialog">
+		<div class="modal popup" role="dialog" id="exampleModal">
 			<button class="popup__close" type="button" aria-label="Закрыть модальное окно">
 				<span aria-hidden="true">×</span>
 			</button>
-			<h2 class="title title_size_small">Ошибка!</h2>
-			<p class="text">Мы свяжемся с вами в ближайшее время</p>
-		</div>
-
-		<div class="popup" data-target="me-popup" role="dialog">
-			<button class="popup__close" type="button" aria-label="Закрыть модальное окно">
-				<span aria-hidden="true">×</span>
-			</button>
-			<h2 class="title title_size_small">Готово!</h2>
-			<p class="text">Мы свяжемся с вами в ближайшее время</p>
+			<h2 class="title title_size_small popup__title">Ошибка!</h2>
+			<p class="text popup__text">Мы свяжемся с вами в ближайшее время</p>
 		</div>
 	</div>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="assets/scripts/popup.js"></script>
 </body>
 
