--- a/source/markup/popup.html
+++ b/source/markup/popup.html
@@ -21,7 +21,7 @@
 
 
 	<div class="overlay">
-		<div class="modal popup" role="dialog" id="exampleModal">
+		<div class="popup" role="dialog">
 			<button class="popup__close" type="button" aria-label="Закрыть модальное окно">
 				<span aria-hidden="true">×</span>
 			</button>
@@ -30,7 +30,6 @@
 		</div>
 	</div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="assets/scripts/popup.js"></script>
 </body>
 
