--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -85,6 +85,77 @@
 						</span>
 					</button>
 
+					<a
+						class="content__share content__share_social_twitter"
+						target="_blank"
+					>
+						<svg
+							class="content__share-icon"
+							width="30"
+							height="30"
+							aria-hidden="true"
+							focusable="false"
+						>
+							<use href="assets/images/svg/sprite.svg#share-twitter"></use>
+						</svg>
+						<span class="visually-hidden">
+							Поделиться в твиттере
+						</span>
+					</a>
+
+					<a
+						class="content__share content__share_social_vk"
+						target="_blank"
+					>
+						<svg
+							class="content__share-icon"
+							width="30"
+							height="30"
+							aria-hidden="true"
+							focusable="false"
+						>
+							<use href="assets/images/svg/sprite.svg#share-vk"></use>
+						</svg>
+						<span class="visually-hidden">
+							Поделиться в вконтакте
+						</span>
+					</a>
+
+					<a
+						class="content__share content__share_social_telegram"
+						target="_blank"
+					>
+						<svg
+							class="content__share-icon"
+							width="30"
+							height="30"
+							aria-hidden="true"
+							focusable="false"
+						>
+							<use href="assets/images/svg/sprite.svg#share-telegram"></use>
+						</svg>
+						<span class="visually-hidden">
+							Поделиться в телеграме
+						</span>
+					</a>
+
+					<a
+						class="content__share content__share_social_linkedin"
+						target="_blank"
+					>
+						<svg
+							class="content__share-icon"
+							width="30"
+							height="30"
+							aria-hidden="true"
+							focusable="false"
+						>
+							<use href="assets/images/svg/sprite.svg#share-linkedin"></use>
+						</svg>
+						<span class="visually-hidden">
+							Поделиться в линкедин
+						</span>
+					</a>
 					<button class="button_form_none content__button-reply content__button-svg" type="button">
 					<span class="visually-hidden">Скопировать ссылку</span>
 					<svg class="content__svg-return" width="21" height="17" aria-hidden="true" focusable="false">
@@ -757,6 +828,7 @@
 	</footer>
 
 
+	<script src="assets/scripts/share.js"></script>
 	<script src="assets/scripts/footer.js"></script>
 	<script src="assets/scripts/article.js"></script>
 	<script src="assets/scripts/index.js"></script>
