--- a/source/markup/new-header.html
+++ b/source/markup/new-header.html
@@ -1447,12 +1447,12 @@
 			Главная
 		</a>
 
-		<button class="c-menu__button c-menu__button_type_search" type="button">
+		<!-- <button class="c-menu__button c-menu__button_type_search" type="button">
 			<svg width="18" height="18" aria-hidden="true" focusable="false">
 				<use href="assets/images/svg/sprite.svg#searchBac"></use>
 			</svg>
 			Поиск
-		</button>
+		</button> -->
 
 		<button class="c-menu__button c-menu__button_type_auth" type="button">
 			<svg width="19" height="18" aria-hidden="true" focusable="false">
@@ -1471,7 +1471,7 @@
 	<!-- /c-menu -->
 
 	<!-- c-mobile-search -->
-	<form class="page__c-mobile-search c-mobile-search" action="" method="">
+	<!-- <form class="page__c-mobile-search c-mobile-search" action="" method="">
 		<input class="c-mobile-search__input" type="text" name="website_search" placeholder="Поиск по сайту">
 		<button class="c-mobile-search__close" type="button">
 			<svg class="c-mobile-search__close-icon" width="13" height="13" aria-hidden="true" focusable="false">
@@ -1481,7 +1481,7 @@
 				Закрыть
 			</span>
 		</button>
-	</form>
+	</form> -->
 	<!-- /c-mobile-search -->
 
 	<!-- c-main-header -->
