--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -237,9 +237,12 @@
 					предметов
 					коллекционирования.
 				</p>
-				<a class="link main-card__link-btn" href="">
+				<button
+					class="link main-card__link-btn"
+					type="button"
+				>
 					Полное определение
-				</a>
+				</button>
 			</div>
 
 			<div class="main-card last__grid-item">
@@ -653,14 +656,23 @@
 							Offering (ICO)
 						</a>
 					</h2>
-					<p class="text main-card__text">
+					<p class="text main-card__text main-card__text_type_short">
+						Инновационный подход к привлечению средств за счет использования цифровых валют (криптовалют). Такая
+						стратегия более распространена в криптовалютных проектах, которые еще не полностью разработали свой продукт,
+						услугу или платформу на основе блокчейна.
+						Инновационный подход к привлечению средств за счет использования цифровых валют (криптовалют). Такая
+						стратегия более распространена в криптовалютных проектах, которые еще не полностью разработали свой продукт,
+						услугу или платформу на основе блокчейна.
 						Инновационный подход к привлечению средств за счет использования цифровых валют (криптовалют). Такая
 						стратегия более распространена в криптовалютных проектах, которые еще не полностью разработали свой продукт,
 						услугу или платформу на основе блокчейна.
 					</p>
-					<a class="link main-card__link-btn" href="">
-						Полное определение
-					</a>
+					<button
+						class="link main-card__link-btn"
+						type="button"
+					>
+						Показать полностью
+					</button>
 				</div>
 
 				<div class="main-card">
@@ -679,9 +691,12 @@
 						Система стейкинга NFT-keys, что делает обладателей ключей не только ценными членами сообщества, но и
 						инвесторами на самой ранней стадии
 					</p>
-					<a class="link main-card__link-btn" href="#">
-						Полное определение
-					</a>
+					<button
+						class="link main-card__link-btn"
+						type="button"
+					>
+						Показать полностью
+					</button>
 				</div>
 			</div>
 		</div>
