--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -671,7 +671,7 @@
 						class="link main-card__link-btn"
 						type="button"
 					>
-						Показать полностью
+						Полное определение
 					</button>
 				</div>
 
@@ -695,7 +695,7 @@
 						class="link main-card__link-btn"
 						type="button"
 					>
-						Показать полностью
+						Полное определение
 					</button>
 				</div>
 			</div>
