--- a/source/markup/profile.html
+++ b/source/markup/profile.html
@@ -32,14 +32,18 @@
 						accept="image/png, image/jpeg"
 					>
 					<!--
-					Показываем, когда пользователь загрузил фото
-					<img
+					<label
 						class="profile__avatar-image"
-						src="https://picsum.photos/140/140"
-						width="80"
-						height="80"
-						alt="Имя пользователя"
-					> -->
+						for="user-image"
+					>
+						<img
+							class="profile__avatar-image-content"
+							src="https://picsum.photos/140/140"
+							width="80"
+							height="80"
+							alt="Имя пользователя"
+						>
+					</label> -->
 				</form>
 				<figcaption class="profile__avatar-info">
 					<div class="profile__avatar-info-wrapper">
