--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -227,7 +227,7 @@
 				</div>
 
 				<button class="button_form_none filter__bottom-button" type="submit">
-					Применить фильтры
+					Применить
 				</button>
 				<button class="button_form_none filter__button-clear filter__bottom-button" type="reset">
 					Очистить
