--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -291,7 +291,7 @@
 			Изучайте интерестные темы, пользуйтесь нашей навигацией
 		</h2>
 		<div class="nav__topic">
-			<h3 class="text text_size_normal nav__tipick-title">
+			<h3 class="nav__topic-title text text_size_normal nav__tipick-title">
 				Темы
 			</h3>
 			<div class="nav__topic-wrap">
