--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -10,6 +10,220 @@
 </head>
 
 <body class="page__body">
+	<div class="page__c-mobile-info c-mobile-info" data-mobile-info="info">
+		<div class="c-mobile-info__layout"></div>
+		<button class="c-mobile-info__button" type="button">
+			<svg class="c-mobile-info__button-icon" width="18" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#onof"></use>
+			</svg>
+			<span class="visually-hidden">
+				Закрыть
+			</span>
+		</button>
+		<ul class="external-list reset-list">
+			<li class="external-list__item">
+				<div class="external-list__icon">
+					<svg class="external-list__image" width="15" height="15" viewBox="0 0 15 15" fill="none"
+						xmlns="http://www.w3.org/2000/svg">
+						<path
+							d="M4.58705 6.30315L7.50004 3.39022L10.4145 6.30465L12.1095 4.60965L7.50004 0L2.89212 4.60815L4.58705 6.30315ZM0.000167847 7.49977L1.69522 5.80471L3.39016 7.49966L1.69512 9.1947L0.000167847 7.49977ZM4.58705 8.69685L7.50004 11.6098L10.4145 8.69543L12.1104 10.3895L12.1095 10.3904L7.50004 15L2.89197 10.392L2.88957 10.3896L4.58705 8.69685ZM11.6102 7.5007L13.3053 5.80565L15.0002 7.50059L13.3052 9.19565L11.6102 7.5007Z"
+							fill="#F9E312" />
+					</svg>
+				</div>
+				<a class="external-list__text" href="#">
+					Обмен
+				</a>
+				<p class="external-list__paragraph">
+					Блокчейн и обмен криптоактивами
+				</p>
+			</li>
+
+			<li class="external-list__item">
+				<div class="external-list__icon">
+					<svg class="external-list__image" width="15" height="15" viewBox="0 0 15 15" fill="none"
+						xmlns="http://www.w3.org/2000/svg">
+						<path
+							d="M4.58705 6.30315L7.50004 3.39022L10.4145 6.30465L12.1095 4.60965L7.50004 0L2.89212 4.60815L4.58705 6.30315ZM0.000167847 7.49977L1.69522 5.80471L3.39016 7.49966L1.69512 9.1947L0.000167847 7.49977ZM4.58705 8.69685L7.50004 11.6098L10.4145 8.69543L12.1104 10.3895L12.1095 10.3904L7.50004 15L2.89197 10.392L2.88957 10.3896L4.58705 8.69685ZM11.6102 7.5007L13.3053 5.80565L15.0002 7.50059L13.3052 9.19565L11.6102 7.5007Z"
+							fill="#F9E312" />
+					</svg>
+
+				</div>
+				<a class="external-list__text" href="#">
+					Лаборатория
+				</a>
+				<p class="external-list__paragraph">
+					Инкубатор для топовых блокчейн-проектов
+				</p>
+			</li>
+		</ul>
+	</div>
+
+	<div class="page__c-mobile-info c-mobile-info" data-mobile-info="language">
+		<div class="c-mobile-info__layout"></div>
+		<button class="c-mobile-info__button" type="button">
+			<svg class="c-mobile-info__button-icon" width="18" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#onof"></use>
+			</svg>
+			<span class="visually-hidden">
+				Закрыть
+			</span>
+		</button>
+		<ul class="language-switcher reset-list">
+			<li class="language-switcher__item">
+				<a class="language-switcher__link" href="#">
+					English
+				</a>
+			</li>
+			<li class="language-switcher__item">
+				<a class="language-switcher__link" href="#">
+					English
+				</a>
+			</li>
+			<li class="language-switcher__item">
+				<a class="language-switcher__link" href="#">
+					English
+				</a>
+			</li>
+			<li class="language-switcher__item">
+				<a class="language-switcher__link" href="#">
+					English
+				</a>
+			</li>
+		</ul>
+	</div>
+
+	<!-- c-mobile-header-auth -->
+	<div class="page__c-mobile-header-auth c-mobile-header-auth auth">
+		<button class="c-mobile-header-auth__close" type="button">
+			<svg class="c-mobile-header-auth__close-icon" width="18" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#onof"></use>
+			</svg>
+			<span class="visually-hidden">
+				Закрыть
+			</span>
+		</button>
+		<div class="auth__auth-form c-mobile-header-auth__form">
+			<h1 class="c-mobile-header-auth__title title auth__title">
+				Вам нужен кошелек Ethereum,
+				чтобы использовать Bithoven
+			</h1>
+
+			<p class="c-mobile-header-auth__paragraph paragraph auth__paragraph">
+				Подключитесь к одному из наших доступных поставщиков
+				кошельков или создайте новый
+			</p>
+			<div class="auth__wrap">
+				<a class="auth__link-wallet auth__link-wallet_subject_metamask">
+					<p class="paragraph">
+						Meta Mask
+					</p>
+				</a>
+
+				<a class="auth__link-wallet auth__link-wallet_subject_binance">
+					<p class="paragraph">
+						Binance Wallet
+					</p>
+				</a>
+
+				<a class="auth__link-wallet auth__link-wallet_subject_coinbase">
+					<p class="paragraph">
+						Coinbase Wallet
+					</p>
+				</a>
+
+				<a class="auth__link-wallet auth__link-wallet_subject_all">
+					<p class="paragraph">
+						Дополнительно
+					</p>
+				</a>
+			</div>
+
+			<p class="paragraph auth__text">
+				У вас еще нет притокашелька?
+			</p>
+
+			<a class="button auth__button">
+				Как подключить
+			</a>
+		</div>
+	</div>
+	<!-- /c-mobile-header-auth -->
+
+
+	<!-- c-header-block -->
+	<div class="page__c-mobile-header-menu c-mobile-header-menu">
+		<button class="c-mobile-header-menu__close" type="button">
+			<svg class="c-mobile-header-menu__close-icon" width="18" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#onof"></use>
+			</svg>
+			<span class="visually-hidden">
+				Закрыть
+			</span>
+		</button>
+		<button class="c-mobile-header-menu__button" type="button">
+			Темы
+		</button>
+		<div class="c-mobile-header-menu__themes">
+			<a class="button" href="#">Altcoin</a>
+			<a class="button" href="#">Altcoin 2</a>
+			<a class="button" href="#">Altcoin 3</a>
+			<a class="button" href="#">Altcoin 4</a>
+			<a class="button" href="#">Altcoin 5</a>
+		</div>
+		<ul class="c-mobile-header-menu__list reset-list">
+			<li class="c-mobile-header-menu__list-item">
+				<a class="c-mobile-header-menu__list-link" href="#">
+					Глоссарий
+				</a>
+			</li>
+			<li class="c-mobile-header-menu__list-item">
+				<a class="c-mobile-header-menu__list-link" href="#">
+					Викторина
+				</a>
+			</li>
+			<li class="c-mobile-header-menu__list-item">
+				<a class="c-mobile-header-menu__list-link" href="#">
+					Купить криптовалюту
+				</a>
+			</li>
+		</ul>
+	</div>
+	<!-- /c-header-block -->
+
+	<!-- c-mobile-header -->
+	<header class="page__c-mobile-header c-mobile-header container">
+		<a class="c-mobile-header__logotype logotype" href="/">
+			<img class="logotype__image" width="81" height="34" src="assets/images/main-logo.svg"
+				alt="Логотип компании Bithoven">
+		</a>
+
+		<button class="c-mobile-header__button c-mobile-header__button_type_language" type="button">
+			<span aria-hidden="true">ru</span>
+			<span class="visually-hidden">
+				Выберите язык
+			</span>
+		</button>
+
+		<button class="c-mobile-header__button c-mobile-header__button_type_info" type="button">
+			<svg width="20" height="20" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#deck"></use>
+			</svg>
+			<span class="visually-hidden">
+				Информация
+			</span>
+		</button>
+
+		<button class="c-mobile-header__button c-mobile-header__button_type_search" type="button">
+			<svg width="17" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#main-search"></use>
+			</svg>
+			<span class="visually-hidden">
+				Поиск
+			</span>
+		</button>
+	</header>
+	<!-- /c-mobile-header -->
+	
 	<section class="hero">
 		<div class="hero__container container">
 			<h1 class="title title_size_large hero__title">
@@ -912,7 +1126,229 @@
 		</а>
 	</footer>
 
+
+	<!-- c-menu -->
+	<nav class="page__c-menu c-menu">
+		<a class="c-menu__button" href="/">
+			<svg width="16" height="17" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#home"></use>
+			</svg>
+			Главная
+		</a>
+
+		<!-- <button class="c-menu__button c-menu__button_type_search" type="button">
+			<svg width="18" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#searchBac"></use>
+			</svg>
+			Поиск
+		</button> -->
+
+		<button class="c-menu__button c-menu__button_type_auth" type="button">
+			<svg width="19" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#profile"></use>
+			</svg>
+			Профиль
+		</button>
+
+		<button class="c-menu__button c-menu__button_type_menu" type="button">
+			<svg width="22" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#menu"></use>
+			</svg>
+			Меню
+		</button>
+	</nav>
+	<!-- /c-menu -->
+
+	<!-- c-mobile-search -->
+	<!-- <form class="page__c-mobile-search c-mobile-search" action="" method="">
+		<input class="c-mobile-search__input" type="text" name="website_search" placeholder="Поиск по сайту">
+		<button class="c-mobile-search__close" type="button">
+			<svg class="c-mobile-search__close-icon" width="13" height="13" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#mobile-search"></use>
+			</svg>
+			<span class="visually-hidden">
+				Закрыть
+			</span>
+		</button>
+	</form> -->
+	<!-- /c-mobile-search -->
+
+	<!-- c-main-header -->
+	<header class="page__c-main-header c-main-header">
+		<div class="c-main-header__wrapper container">
+
+			<button class="c-main-header__button c-main-header__button_type_main" type="button">
+				<svg width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+					<path fill="#fff"
+						d="M0 0h5.882v5.882H0zM0 7.882h5.882v5.882H0zM0 15.765h5.882v5.882H0zM7.882 0h5.882v5.882H7.882zM7.882 7.882h5.882v5.882H7.882zM7.882 15.765h5.882v5.882H7.882zM15.765 0h5.882v5.882h-5.882zM15.765 7.882h5.882v5.882h-5.882zM15.765 15.765h5.882v5.882h-5.882z" />
+				</svg>
+				<span class="visually-hidden">
+					Дополнительные ресурсы
+				</span>
+
+				<div class="c-main-header__submenu c-main-header__submenu_type_external">
+					<div class="c-main-header__submenu-wrapper c-main-header__submenu-wrapper_type_external">
+						<ul class="c-main-header__external external-list reset-list">
+							<li class="external-list__item">
+								<div class="external-list__icon">
+									<svg class="external-list__image" width="15" height="15" viewBox="0 0 15 15" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M4.58705 6.30315L7.50004 3.39022L10.4145 6.30465L12.1095 4.60965L7.50004 0L2.89212 4.60815L4.58705 6.30315ZM0.000167847 7.49977L1.69522 5.80471L3.39016 7.49966L1.69512 9.1947L0.000167847 7.49977ZM4.58705 8.69685L7.50004 11.6098L10.4145 8.69543L12.1104 10.3895L12.1095 10.3904L7.50004 15L2.89197 10.392L2.88957 10.3896L4.58705 8.69685ZM11.6102 7.5007L13.3053 5.80565L15.0002 7.50059L13.3052 9.19565L11.6102 7.5007Z"
+											fill="#F9E312" />
+									</svg>
+								</div>
+								<a class="external-list__text" href="#">
+									Обмен
+								</a>
+								<p class="external-list__paragraph">
+									Блокчейн и обмен криптоактивами
+								</p>
+							</li>
+
+							<li class="external-list__item">
+								<div class="external-list__icon">
+									<svg class="external-list__item" width="13" height="13" viewBox="0 0 13 13" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M12.3002 10.7045L8.88951 4.39467V0.635744C8.88951 0.281983 8.59356 0 8.24008 0H4.75879C4.40502 0 4.11392 0.281983 4.11392 0.635744V4.39467L0.700422 10.7045C0.440081 11.1856 0.453183 11.7698 0.733179 12.2401C1.01317 12.7098 1.52104 13 2.06793 13H10.9307C11.4775 13 11.9866 12.7098 12.2665 12.2401C12.5463 11.7698 12.5605 11.1856 12.3002 10.7045ZM7.06313 8.06472C7.36876 8.06472 7.61628 8.31224 7.61628 8.61787C7.61628 8.92321 7.36819 9.17101 7.06313 9.17101C6.75778 9.17101 6.50997 8.92321 6.50997 8.61787C6.50997 8.3131 6.7575 8.06472 7.06313 8.06472ZM5.50763 4.73874C5.81326 4.73874 6.06078 4.98655 6.06078 5.29217C6.06078 5.59751 5.81326 5.84531 5.50763 5.84531C5.202 5.84531 4.95447 5.59751 4.95447 5.29217C4.95476 4.98655 5.202 4.73874 5.50763 4.73874ZM5.50763 6.6699C6.00268 6.6699 6.4043 7.07151 6.4043 7.56627C6.4043 8.0613 6.00268 8.46263 5.50763 8.46263C5.0123 8.46263 4.61096 8.0613 4.61096 7.56627C4.61096 7.07123 5.0123 6.6699 5.50763 6.6699ZM10.6569 11.2685C10.5419 11.4645 10.3314 11.5801 10.1049 11.5801H2.89367C2.66694 11.5801 2.45673 11.4645 2.34166 11.2685C2.22658 11.0725 2.22345 10.8333 2.33368 10.6345L3.20044 9.07644C3.32406 8.85371 3.56788 8.7261 3.82139 8.75031C4.97242 8.85997 6.26615 9.84464 7.42231 9.80077C8.04155 9.77713 8.61635 9.55154 9.16381 9.24991C9.47286 9.07901 9.86166 9.19095 10.0331 9.4997L10.6652 10.6339C10.7749 10.833 10.772 11.0728 10.6569 11.2685Z"
+											fill="#F9E312" />
+									</svg>
+
+								</div>
+								<a class="external-list__text" href="#">
+									Лаборатория
+								</a>
+								<p class="external-list__paragraph">
+									Инкубатор для топовых блокчейн-проектов
+								</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+			</button>
+
+			<button class="c-main-header__button" type="button">
+				Узнать
+				<div class="c-main-header__submenu c-main-header__submenu_type_external">
+					<div class="c-main-header__submenu-wrapper c-main-header__submenu-wrapper_type_external">
+						<ul class="c-main-header__external external-list reset-list">
+							<li class="external-list__item">
+								<div class="external-list__icon">
+									<svg class="external-list__image" width="15" height="15" viewBox="0 0 15 15" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M4.58705 6.30315L7.50004 3.39022L10.4145 6.30465L12.1095 4.60965L7.50004 0L2.89212 4.60815L4.58705 6.30315ZM0.000167847 7.49977L1.69522 5.80471L3.39016 7.49966L1.69512 9.1947L0.000167847 7.49977ZM4.58705 8.69685L7.50004 11.6098L10.4145 8.69543L12.1104 10.3895L12.1095 10.3904L7.50004 15L2.89197 10.392L2.88957 10.3896L4.58705 8.69685ZM11.6102 7.5007L13.3053 5.80565L15.0002 7.50059L13.3052 9.19565L11.6102 7.5007Z"
+											fill="#F9E312" />
+									</svg>
+								</div>
+								<a class="external-list__text" href="#">
+									Обмен
+								</a>
+								<p class="external-list__paragraph">
+									Блокчейн и обмен криптоактивами
+								</p>
+							</li>
+
+							<li class="external-list__item">
+								<div class="external-list__icon">
+									<svg class="external-list__item" width="13" height="13" viewBox="0 0 13 13" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M12.3002 10.7045L8.88951 4.39467V0.635744C8.88951 0.281983 8.59356 0 8.24008 0H4.75879C4.40502 0 4.11392 0.281983 4.11392 0.635744V4.39467L0.700422 10.7045C0.440081 11.1856 0.453183 11.7698 0.733179 12.2401C1.01317 12.7098 1.52104 13 2.06793 13H10.9307C11.4775 13 11.9866 12.7098 12.2665 12.2401C12.5463 11.7698 12.5605 11.1856 12.3002 10.7045ZM7.06313 8.06472C7.36876 8.06472 7.61628 8.31224 7.61628 8.61787C7.61628 8.92321 7.36819 9.17101 7.06313 9.17101C6.75778 9.17101 6.50997 8.92321 6.50997 8.61787C6.50997 8.3131 6.7575 8.06472 7.06313 8.06472ZM5.50763 4.73874C5.81326 4.73874 6.06078 4.98655 6.06078 5.29217C6.06078 5.59751 5.81326 5.84531 5.50763 5.84531C5.202 5.84531 4.95447 5.59751 4.95447 5.29217C4.95476 4.98655 5.202 4.73874 5.50763 4.73874ZM5.50763 6.6699C6.00268 6.6699 6.4043 7.07151 6.4043 7.56627C6.4043 8.0613 6.00268 8.46263 5.50763 8.46263C5.0123 8.46263 4.61096 8.0613 4.61096 7.56627C4.61096 7.07123 5.0123 6.6699 5.50763 6.6699ZM10.6569 11.2685C10.5419 11.4645 10.3314 11.5801 10.1049 11.5801H2.89367C2.66694 11.5801 2.45673 11.4645 2.34166 11.2685C2.22658 11.0725 2.22345 10.8333 2.33368 10.6345L3.20044 9.07644C3.32406 8.85371 3.56788 8.7261 3.82139 8.75031C4.97242 8.85997 6.26615 9.84464 7.42231 9.80077C8.04155 9.77713 8.61635 9.55154 9.16381 9.24991C9.47286 9.07901 9.86166 9.19095 10.0331 9.4997L10.6652 10.6339C10.7749 10.833 10.772 11.0728 10.6569 11.2685Z"
+											fill="#F9E312" />
+									</svg>
+
+								</div>
+								<a class="external-list__text" href="#">
+									Лаборатория
+								</a>
+								<p class="external-list__paragraph">
+									Инкубатор для топовых блокчейн-проектов
+								</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</button>
+			<button class="c-main-header__button" type="button">
+				Темы
+				<div class="c-main-header__submenu">
+					<div class="c-main-header__submenu-wrapper">
+						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+					</div>
+				</div>
+			</button>
+			<a class="c-main-header__logotype logotype" href="/">
+				<img class="logotype__image" width="108" height="45" src="assets/images/main-logo.svg"
+					alt="Логотип компании Bithoven">
+			</a>
+			<div class="c-main-header__box">
+				<div class="c-main-header__user">
+					<img class="c-main-header__user-image" src="https://picsum.photos/200/300" width="24" height="24" alt="">
+					<span class="c-main-header__user-text">
+						[Vip]
+					</span>
+				</div>
+				<button class="c-main-header__button" type="button">
+					<span class="c-main-header__button-text">ru</span>
+					<div class="c-main-header__submenu">
+						<div class="c-main-header__submenu-wrapper">
+							<ul class="language-switcher reset-list">
+								<li class="language-switcher__item">
+									<a class="language-switcher__link" href="#">
+										English
+									</a>
+								</li>
+								<li class="language-switcher__item">
+									<a class="language-switcher__link" href="#">
+										English
+									</a>
+								</li>
+								<li class="language-switcher__item">
+									<a class="language-switcher__link" href="#">
+										English
+									</a>
+								</li>
+								<li class="language-switcher__item">
+									<a class="language-switcher__link" href="#">
+										English
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</button>
+				<form class="c-main-header__form" action="" method="">
+					<input class="c-main-header__form-input" type="text" name="website_search">
+					<button class="c-main-header__form-reset" type="button">
+						<svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M5.5 4.27797L9.77797 0L11 1.22203L6.72203 5.5L11 9.77797L9.77797 11L5.5 6.72203L1.22203 11L0 9.77797L4.27797 5.5L0 1.22203L1.22203 0L5.5 4.27797Z"
+								fill="white" />
+						</svg>
+						<span class="visually-hidden">
+							Сбросить значение формы
+						</span>
+					</button>
+				</form>
+			</div>
+			<a class="button button_color_yellow" href="/auth.html">
+				Авторизация
+			</a>
+		</div>
+	</header>
+	<!-- /c-main-header -->
+
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+	<script src="assets/scripts/toggle-element.js"></script>
+	<script src="assets/scripts/c-header.js"></script>
+	<script src="assets/scripts/c-menu.js"></script>
 	<script src="assets/scripts/slider.js"></script>
 	<script src="assets/scripts/main.js"></script>
 	<script src="assets/scripts/index.js"></script>
