--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -207,7 +207,7 @@
 						Сортировка плиткой
 					</span>
 
-					<button class="button_form_none filter__button filter__button_state_active" type="button">
+					<button class="filter__btn button_form_none filter__button filter__button_state_active" type="button">
 						<span class="visually-hidden">
 							Сортировка плиткой
 						</span>
@@ -216,7 +216,7 @@
 						</svg>
 					</button>
 
-					<button class="button_form_none filter__button" type="button">
+					<button class="filter__btn button_form_none filter__button" type="button">
 						<span class="visually-hidden">
 							Сортировка строкой
 						</span>
