--- a/source/markup/education.html
+++ b/source/markup/education.html
@@ -611,6 +611,7 @@
 	</footer>
 
 	<script src="assets/scripts/index.js"></script>
+	<script src="assets/scripts/education.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
 
