--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -223,7 +223,7 @@
 		</button>
 	</header>
 	<!-- /c-mobile-header -->
-	
+
 	<section class="hero">
 		<div class="hero__container container">
 			<h1 class="title title_size_large hero__title">
@@ -1351,6 +1351,7 @@
 	<script src="assets/scripts/c-menu.js"></script>
 	<script src="assets/scripts/slider.js"></script>
 	<script src="assets/scripts/main.js"></script>
+	<script src="assets/scripts/reset-tags.js"></script>
 	<script src="assets/scripts/index.js"></script>
 </body>
 
