--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -818,7 +818,7 @@
 						Это количество терминов в нашем глоссарии. Сколько знаете вы?
 					</p>
 
-					<a class="link main-card__link-btn main-card__link-btn--small main-card__link-btn--active" href="">
+					<a class="study__button link main-card__link-btn main-card__link-btn--active" href="">
 						В глоссарий
 					</a>
 				</div>
