--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -809,6 +809,14 @@
 					<form action="" class="study__form" method="post">
 						<input class="study__input" type="text" name="glossary_search" placeholder="Поиск по глоссарию" value=""
 							id="glossarySearch">
+						<button
+							class="study__search"
+							type="submit"
+						>
+							<span class="visually-hidden">
+								Найти термин
+							</span>
+						</button>
 					</form>
 
 					<h2 class="title study-main-card__title">
