--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -911,7 +911,7 @@
 					<form class="subs__form" action="" method="post">
 
 						<div class="subs__input-wrapper">
-							<input class="subs__form-search" type="text" name="text" placeholder="Введите почту" value=""
+							<input class="subs__form-search" type="email" name="text" placeholder="Введите почту" required
 								id="glossarySearch">
 
 							<button class="button button_color_yellow subs__form-button-desktop" type="submit" name="button">
